--- a/introducao_aprendizado_nao_supervisionado_parte2.ipynb
+++ b/introducao_aprendizado_nao_supervisionado_parte2.ipynb
@@ -216,7 +216,7 @@
       "source": [
         "#3 Fazendo um gráfico de dispersão para os agrupamentos\n",
         "\n",
-        "Vamos usar a biblioteca seaborn para plotar um gráfico de dispersão(scatterplot) a partir dos dados dos agrupamentos. Para fazer isso, precisamos reduzir a dimensão dos dados, que são 20, para 2. Usarei o TSNE do módulo manifold da biblioteca sklearn para fazer esse redisionamento. Aqui vai acontecer algo interessante, quando plotarmos o gráfico, vai parecer que os agrupamentos não foram feitos corretamente. Mas, teremos essa impressão porque, quando fazemos o redisionamento, temos perda de informações. Então acontecerá algo parecido com uma ilusão de ótica, em 2d vemos uma coisa que paree errada, mas se fossemos capazer de ver em 20 dimensões, poderíamsos os agrupamentos da forma correta."
+        "Vamos usar a biblioteca seaborn para plotar um gráfico de dispersão(scatterplot) a partir dos dados dos agrupamentos. Para fazer isso, precisamos reduzir a dimensão dos dados, que são 20, para 2. Usarei o TSNE do módulo manifold da biblioteca sklearn para fazer esse redicionamento. Aqui vai acontecer algo interessante, quando plotarmos o gráfico, vai parecer que os agrupamentos não foram feitos corretamente. Mas, teremos essa impressão porque, quando fazemos o redicionamento, temos perda de informações. Então acontecerá algo parecido com uma ilusão de ótica, em 2d vemos uma coisa que parece errada, mas se fossemos capazer de ver em 20 dimensões, poderíamos ver os agrupamentos da forma correta."
       ]
     },
     {
